--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <div class="section-content">
             <h2>Education</h2>
             <p>DR.MGR.Janaki College Of Arts and Science For Women</p>
+            <p>BCA- Computer Applications</p>
             
             
         </div>
