--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             <ul>
                 <li><a href="#">Responsive Receipe Website</a></li>
                 <li><a href="#">Digital Portfolio</a></li> 
+                  <li><a href="#">Event Website</a></li>
                 <!-- Add more project links here -->
             </ul>
         </div> 
